# Constrained-Reinforcement-Learning

./: .gitignore  .pre-commit-config.yaml  README.md  modernized_example.py  pyproject.toml  quick_start.sh  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  lagrangian_ppo.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py
src/algorithms/: __init__.py  constrained_q_learning.py  lagrangian_ppo.py
src/envs/: __init__.py  constrained_wrappers.py
src/utils/: __init__.py
tests/: test_algorithms.py
